First changes to add main display

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -7,5 +7,7 @@ block page-content
   main.main-content
     .container
       .main-content__inner
-
+        section.display
+          .movie-screen
+          button#load-quote New Quote!
 
