Quotes pulling, have had trouble getting more than one quote Using new API, but only a Quote of the Day Fun with Fetch Src

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -9,5 +9,10 @@ block page-content
       .main-content__inner
         section.display
           .movie-screen
+            #quote-display
+            span#author-title
+        section.button-row
           button#load-quote New Quote!
+          button#tweet Tweet tweet!
+          button#fakebook Phasebuuk
 
