Facebook still whack

--- a/src/pug/layout/base.pug
+++ b/src/pug/layout/base.pug
@@ -9,6 +9,8 @@ html(lang="en")
     - var bodyClasses = '';
 
   body(class=bodyClasses)
+    script
+      include ../../js/modules/fbinit.js
     .page
       include ../objects/header
       .content
