--- a/src/pug/base/head.pug
+++ b/src/pug/base/head.pug
@@ -1,3 +1,9 @@
 meta(charset="UTF-8")
 meta(http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1")
 meta(name="viewport" content="width=device-width, initial-scale=1")
+
+meta(property="og:url" content="http://www.your-domain.com/your-page.html")
+meta(property="og:type" content="website")
+meta(property="og:title" content="Your Website Title")
+meta(property="og:description" content="Your description")
+meta(property="og:image" content="http://www.your-domain.com/path/image.jpg")
